This is the source code of the JADE Semantics Add-on, version 1.2 Main improvements: - improved Kbase implementation (handles better SL expressiveness, efficiency improvement) - improved SL patterns handling (better matching with =, and & or logical operators, added a new IRE quantifier: some) - improved architecture between SIPs and Kbase filters - complies with pJava compilation - complies with .Net compilation - and of course, numerous bug fixes
git-svn-id: https://jade.tilab.com/svn/jade_add-ons/trunk@647 815794fe-97f2-0310-9206-e62f04a60ddc